--- a/index.html
+++ b/index.html
@@ -5,16 +5,130 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FormsDirectXBoundless</title>
   <style>
+  /* Global Reset */
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  /* Smooth Scrolling */
+  html {
+    scroll-behavior: smooth;
+  }
+
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f8f8f8; /* Light background for smoother feel */
+    color: #333; /* Dark text for good readability */
+    margin: 20px;
+    line-height: 1.6;
+    transition: background-color 0.3s ease; /* Smooth background transition */
+  }
+
+  /* Header Styling */
+  h1 {
+    font-size: 2.5rem;
+    margin-bottom: 1.5rem;
+    color: #2c3e50;
+    transition: color 0.3s ease;
+  }
+
+  /* Content Container */
+  #content {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: transform 0.3s ease;
+  }
+
+  /* Code Blocks */
+  pre {
+    background-color: #f4f4f4;
+    padding: 15px;
+    border-radius: 8px;
+    border: 1px solid #ddd;
+    overflow-x: auto; /* Horizontal scrolling for long code blocks */
+    margin-bottom: 1.5rem;
+    transition: background-color 0.3s ease;
+  }
+
+  /* Links Styling */
+  a {
+    color: #3498db;
+    text-decoration: none;
+    transition: color 0.3s ease;
+  }
+
+  a:hover {
+    color: #1abc9c; /* Hover effect for links */
+  }
+
+  /* Image Styling */
+  img {
+    max-width: 100%;
+    border-radius: 8px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    transition: transform 0.3s ease;
+  }
+
+  img:hover {
+    transform: scale(1.05); /* Slight zoom effect on images */
+  }
+
+  /* For Better Font Rendering */
+  body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+  /* Smooth Hover Effects */
+  .smooth-hover:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  /* Button Styles */
+  .smooth-btn {
+    padding: 10px 20px;
+    background-color: #3498db;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+  }
+
+  .smooth-btn:hover {
+    background-color: #2980b9;
+    transform: translateY(-3px);
+  }
+
+  /* Container for responsiveness */
+  @media (max-width: 768px) {
     body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
+      margin: 10px;
     }
+
+    h1 {
+      font-size: 2rem;
+    }
+
+    #content {
+      padding: 15px;
+    }
+
     pre {
-      background-color: #f4f4f4;
-      padding: 10px;
-      border: 1px solid #ccc;
+      font-size: 0.9rem;
     }
-  </style>
+  }
+</style>
 </head>
 <body>
   <div id="content"></div>
